cmake_minimum_required(VERSION 3.17)

project(qtmediate-cmake-modules VERSION 0.0.0.1)

if(NOT DEFINED CMAKE_RUNTIME_OUTPUT_DIRECTORY)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
endif()

if(NOT DEFINED CMAKE_LIBRARY_OUTPUT_DIRECTORY)
    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
endif()

if(NOT DEFINED CMAKE_ARCHIVE_OUTPUT_DIRECTORY)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
endif()

set(QTMEDIATE_MODULES_VERSION ${PROJECT_VERSION})
set(QTMEDIATE_MODULES_INSTALL_NAME ${PROJECT_NAME})

include(cmake/QtMediateAPI.cmake)

add_subdirectory(src)